Bug 1797464 - Enable/disable window occlusion only when compositor session exists on Windows r=gfx-reviewers,lsalzman, a=dmeehan

When compositor session exists, gfxConfig is already initialized.

If first AppWindow is destroyed in nsAppShellService::JustCreateTopWindow() because of error, the first window could be destroyed before calling gfxConfig::Init(). gfxConfig::Init() is called from gfxPlatform::GetPlatform(). gfxPlatform::GetPlatform() is called just before creating compositor by nsBaseWidget::CreateCompositor()

Differential Revision: https://phabricator.services.mozilla.com/D160453