widget/windows/nsWindowGfx.cpp
@@ -404,6 +404,12 @@ void nsWindow::NotifyOcclusionState(mozilla::widget::OcclusionState aState) {
 }
 
 void nsWindow::MaybeEnableWindowOcclusion(bool aEnable) {
+  // WindowOcclusion is enabled/disabled only when compositor session exists.
+  // See nsWindow::NeedsToTrackWindowOcclusionState().
+  if (!mCompositorSession) {
+    return;
+  }
+
   bool enabled = gfxConfig::IsEnabled(gfx::Feature::WINDOW_OCCLUSION);
 
   if (aEnable) {
